Fixed playback speed slider behind logo

--- a/static/style/index.css
+++ b/static/style/index.css
@@ -21,7 +21,7 @@ html, body, #map {
 	position: absolute;
 	bottom: 65px;
 	right: 5px;
-	z-index: 999;
+	z-index: 1;
 	opacity: 0.8;
 }
 
@@ -370,6 +370,7 @@ html, body, #map {
 	float: right;
 	width: 80px;
 	transform: rotate(270deg);
+	z-index: 2;
 }
 
 #playbackSpeedSlider::-webkit-slider-thumb {
